<resources>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Northern NM Highlights</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="login_failure_message">Unable to sign in with provided credentials</string>
  <string name="sign_out">Sign out</string>
  <string name="favorite_place_title">Favorite Places</string>
  <string name="title_place_types">Place Types</string>
  <string name="map_title">Map</string>
  <string name="title_places_pref_key">title_places_pref</string>
  <string name="title_places_pref_title">Number of titles to show for places</string>
  <string name="place_type_filter_pref_title">Filter for place types</string>
  <string name="place_type_filter_enabled">place_type_filter_pref</string>
  <string name="string_hint">Places</string>
  <string name="search">search_places</string>
  <string name="current_place_button" translatable="false">Current Place</string>

  <string name="access_fine_location_explanation">If permission to access location is granted, place searches can automatically find results relevant to your location.</string>
  <string name="access_coarse_location_explanation">If permission to access location is granted, place searches can automatically find results relevant to your location.</string>
  <string name="permissions_title">Permissions</string>
  <string name="search_text">Search Text</string>
  <string name="location_format">%.6f,%.6f</string>

</resources>